data/derived/fa15/progs/unify/prog1376.ml.out
Characters 53-59:
  let rec digitsOfInt n = if n < 0 then Printf.fprintf "%d\n" 0 else Print.fprintf "%d " digitsOfInt (n / 10);;
                                                       ^^^^^^
Error: This expression has type string but an expression was expected of type
         out_channel
